<resources>
    <string name="real_app_name">BillCode2</string>
    <string name="kakao_app_key">b5c993f9c3a34e03e664c9b315a00bec</string>
    <string name="facebook_app_id">2090513091240182</string>
    <string name="fb_login_protocol_scheme">fb2090513091240182</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">홈</string>
    <string name="menu_lists">목록</string>
    <string name="menu_buy">재구매</string>
    <string name="menu_tools">설정</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">로그아웃</string>

    <string name="push_on">PUSH ON</string>
    <string name="push_off">PUSH OFF</string>
    <string name="setting_push_alert_guide1">앱을 통한 푸쉬알림을 설정합니다.</string>

    <!-- START firebase messaging service -->
    <string name="app_name">Firebase Cloud Messaging</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <!-- END firebase messaging service -->

</resources>
