<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home">
            </item>

        <item
            android:id="@+id/nav_lists"
            android:enabled="true"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_lists">
            </item>

        <item
            android:id="@+id/nav_buy"
            android:enabled="true"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_buy"
            >

        </item>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_logout"/>
</menu>
